Compiler/src/main/java/Testing/Tests/SemanticTests/SymbolTable/failing/UndefinedImpl.ru
/? Descripción: caso de prueba que verifica que se haya declarado el impl
/? de la clase
/? Salida esperada:
/? ERROR: SEMÁNTICO - DECLARACIONES
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | Linea 8 | COLUMNA 8 | EL IMPL NO ESTA DEFINIDO

struct B{}
start{}